--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
 
         <!-- 배송 글씨 -->
-        <div id="delivery" style="display: inline-block; margin-top:5px; position: fixed;">
+        <div id="delivery" style="display: inline-block; margin-top:7px; position: relative">
             <font size = "2">
                 Deliver to<br>
                 <b>Republic of Korea</b>
@@ -63,7 +63,7 @@
         <!-- 검색창 -->
         <!-- 체크박스, input박스, button으로 검색창을 만든다. 이때 체크박스 안에 품목들이 나열되도록 한다
         스타일시트를 불러와 여백을 바꾸고 아마존의 검색창과 비슷하게 보이도록 한다. -->
-        <div id="searchbox" style="margin-top: -35px; left: 10px;">
+        <div id="searchbox" style="margin-top: -43px; left: 10px;">
             <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet" />
             <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
             <div class="row">
@@ -623,7 +623,7 @@
 <font color="white">
 <footer id="footer">
     <div id="backToTop">
-        <b>Back to top</b><br><br>
+        <a href="#" style="color: white;"><b>&nbsp;<br> Back to top <br>&nbsp;</b></a>
     </div>
 
     <!-- FOOTER - SECTION01 -->
