--- a/index.html
+++ b/index.html
@@ -558,9 +558,9 @@
 <!-- FOOTER, SECTION 1 ~ 4  -->
 <font color="white">
 <footer id="footer">
-    <div id="backToTop" href="#">
-        <a href="#" style="color: white;">
-        <b>&nbsp;<br> Back to top <br>&nbsp;</b></a>
+    <div id="backToTop" class="btn backToTop">
+        <a style="color: white;">
+        <b> Back to top </b></a>
     </div>
 
     <!-- FOOTER - SECTION01 -->
