--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                 <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <ul padding-left:0; margin-left:0;>
-                        <li style="font-size: 17px; font: white; background: #232F3E; margin-top: 5px;">
-                        <a style="font: white;" href="https://www.amazon.com/ap/signin?openid.pape.max_auth_age=0&openid.return_to=https%3A%2F%2Fwww.amazon.com%2F%3F_encoding%3DUTF8%26ref_%3Dnav_em_hd_re_signin&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.assoc_handle=usflex&openid.mode=checkid_setup&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&&ref_%3Dnav_em_hd_clc_signin">
+                        <li style="font-size: 17px; color: white; background: #232F3E; margin-top: 5px;">
+                        <a style="color: white;" href="https://www.amazon.com/ap/signin?openid.pape.max_auth_age=0&openid.return_to=https%3A%2F%2Fwww.amazon.com%2F%3F_encoding%3DUTF8%26ref_%3Dnav_em_hd_re_signin&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.assoc_handle=usflex&openid.mode=checkid_setup&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&&ref_%3Dnav_em_hd_clc_signin">
                             <h4><b> Hello, Sign in </b></h4>
                         </a>
                         </li>
@@ -295,7 +295,6 @@
                 <div class="swiper-slide"><img src="./images/slides/3.jpg"></div>
                 <div class="swiper-slide"><img src="./images/slides/4.jpg"></div>
                 <div class="swiper-slide"><img src="./images/slides/5.jpg"></div>
-                <div class="swiper-slide"><img src="./images/slides/6.jpg"></div>
             </div>
             <div class="swiper-button-next swiper-button-black" id="button_next_second"></div>
             <div class="swiper-button-prev swiper-button-black" id="button_prev_second"></div>
