--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/desktop.css" media="screen and (min-width : 960px)">
     <link rel="stylesheet" href="./css/tablet.css" media="screen and (min-width : 768px) and (max-width: 959px)">
-    <link rel="stylesheet" href="./css/tablet.css" media="screen and (max-width : 767px)">
+    <link rel="stylesheet" href="./css/mobile.css" media="screen and (max-width : 767px)">
     <script defer src="./js/main.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
