자동 입력 해제

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
         <div class="hr-sect"> or enter a US zip code </div>
 
-        <input id="btn_view_03" placeholder="Enter zip code" onkeyup="printName()"> <button id="apply"> Apply </button>
+        <input id="btn_view_03" placeholder="Enter zip code" onkeyup="printName()" autocomplete="off"> <button id="apply"> Apply </button>
         <div id="result"></div>
 
         <div class="hr-sect"> or </div>
@@ -236,7 +236,7 @@
             <option> Aland Islands </option>
         </select>
 
-        <font style="color: brown;"> Try to Change Location :) </font>
+        <font style="color: brown;"> Try to Change Location </font>
 
         <button id="done" onclick="this.parentElement.style.display='none'"> Done </button>
     </div>
