자잘한 것들 수정

--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
             
                 <!-- 사이드바가 아닌 부분을 묶어 속성을 지정 -->
                 <div id="notsideBar">
-                    <a class="hovereffect" href="https://www.amazon.com/international-sales-offers/b/?ie=UTF8&node=15529609011&ref_=nav_cs_gb_intl_52df97a2eee74206a8343034e85cd058" style="color:white">Today's Deals</a>&nbsp;&nbsp;&nbsp;
-                    <a class="hovereffect" href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref_=nav_cs_customerservice_2bf4fe8c5ec54e6bae2d1c24043f012b" style="color:white">Customer Service</a>&nbsp;&nbsp;&nbsp;
-                    <a class="hovereffect" href="https://www.amazon.com/gift-cards/b/?ie=UTF8&node=2238192011&ref_=nav_cs_gc_4fb606b1a14b44e4823e00c03fc71f47" style="color:white">Gift Cards</a>&nbsp;&nbsp;&nbsp;
-                    <a class="hovereffect" href="https://www.amazon.com/b/?_encoding=UTF8&ld=AZUSSOA-sell&node=12766669011&ref_=nav_cs_sell_9321d964d1ab428b8d83e204c043fc01" style="color:white">Sell</a>&nbsp;&nbsp;&nbsp;
-                    <a class="hovereffect" href="https://www.amazon.com/registries?_encoding=UTF8&redirect=true&ref_=nav_cs_registry_1c421982e26d4ec48ca364be68f201b5" style="color:white">Registry</a>&nbsp;&nbsp;&nbsp;
+                    <a class="hovereffect" href="https://www.amazon.com/international-sales-offers/b/?ie=UTF8&node=15529609011&ref_=nav_cs_gb_intl_52df97a2eee74206a8343034e85cd058" style="color:white; padding: 3px;">Today's Deals</a>&nbsp;&nbsp;&nbsp;
+                    <a class="hovereffect" href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref_=nav_cs_customerservice_2bf4fe8c5ec54e6bae2d1c24043f012b" style="color:white; padding: 3px;">Customer Service</a>&nbsp;&nbsp;&nbsp;
+                    <a class="hovereffect" href="https://www.amazon.com/gift-cards/b/?ie=UTF8&node=2238192011&ref_=nav_cs_gc_4fb606b1a14b44e4823e00c03fc71f47" style="color:white; padding: 3px;">Gift Cards</a>&nbsp;&nbsp;&nbsp;
+                    <a class="hovereffect" href="https://www.amazon.com/b/?_encoding=UTF8&ld=AZUSSOA-sell&node=12766669011&ref_=nav_cs_sell_9321d964d1ab428b8d83e204c043fc01" style="color:white; padding: 3px;">Sell</a>&nbsp;&nbsp;&nbsp;
+                    <a class="hovereffect" href="https://www.amazon.com/registries?_encoding=UTF8&redirect=true&ref_=nav_cs_registry_1c421982e26d4ec48ca364be68f201b5" style="color:white; padding: 3px;">Registry</a>&nbsp;&nbsp;&nbsp;
                     <div id="amazonsResponse">
-                    <a class="hovereffect" href="https://www.aboutamazon.com/company-news/amazons-actions-to-help-employees-communities-and-customers-affected-by-covid-19/?_encoding=UTF8&token=GW&utm_content=COVID-19_roundup&utm_medium=swm&utm_source=gateway&utm_term=gw03162020&ref_=nav_swm_undefined&pf_rd_p=cf6260e5-93a9-45ad-9653-d1fc95751fac&pf_rd_s=nav-sitewide-msg-text-export&pf_rd_t=4201&pf_rd_i=navbar-4201&pf_rd_m=ATVPDKIKX0DER&pf_rd_r=C045QSGNV9P6E7SYVE0S" style="color:white">Amazon's response to COVID-19</a>
+                    <a class="hovereffect" href="https://www.aboutamazon.com/company-news/amazons-actions-to-help-employees-communities-and-customers-affected-by-covid-19/?_encoding=UTF8&token=GW&utm_content=COVID-19_roundup&utm_medium=swm&utm_source=gateway&utm_term=gw03162020&ref_=nav_swm_undefined&pf_rd_p=cf6260e5-93a9-45ad-9653-d1fc95751fac&pf_rd_s=nav-sitewide-msg-text-export&pf_rd_t=4201&pf_rd_i=navbar-4201&pf_rd_m=ATVPDKIKX0DER&pf_rd_r=C045QSGNV9P6E7SYVE0S" style="color:white; padding: 3px;">Amazon's response to COVID-19</a>
                     </div>
                 </div>
             </div>
