--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
 
-<body topmargin="0"  leftmargin="0" marginwidth="0" marginheight="0" style="background-color: #eaeded;">
+<body marginwidth="0" marginheight="0" style="background-color: #eaeded;">
 <!-- HEADER, 상단 / 하단 -->
 <header>
     <!-- 헤더의 상단 -->
