--- a/index.html
+++ b/index.html
@@ -320,37 +320,37 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/customer-preferences/select-language/ref=aistrust2?pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unkhttps://www.amazon.com/gp/customer-preferences/select-language/ref=aistrust2?pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_1.jpg" id="icon_slide_01">
+                        <img src="./images/slides/icon_slide_1.jpg" id="icon_slide_01">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/customer-preferences/select-currency/ref=aistrust3?pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_2.jpg" id="icon_slide_02">
+                        <img src="./images/slides/icon_slide_2.jpg" id="icon_slide_02">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=201132710&ref=aistrust4&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_3.jpg" id="icon_slide_03">
+                        <img src="./images/slides/icon_slide_3.jpg" id="icon_slide_03">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html/ref=aistrust5?ie=UTF8&nodeId=201910710&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_4.jpg" id="icon_slide_04">
+                        <img src="./images/slides/icon_slide_4.jpg" id="icon_slide_04">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/ap/signin?_encoding=UTF8&accountStatusPolicy=P1&openid.assoc_handle=usflex&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.mode=checkid_setup&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&openid.ns.pape=http%3A%2F%2Fspecs.openid.net%2Fextensions%2Fpape%2F1.0&openid.pape.max_auth_age=0&openid.return_to=https%3A%2F%2Fwww.amazon.com%2Fgp%2Fcss%2Forder-history%3Fie%3DUTF8%26pd_rd_r%3Daa1d3718-d9fe-4813-bce9-44ce68ec44b7%26pd_rd_w%3DnVaXH%26pd_rd_wg%3D5NxkY%26ref_%3Dpd_gw_unk&pageId=webcs-yourorder&showRmrMe=1">
-                        <img src="./images/icon_slide_5.jpg" id="icon_slide_05">
+                        <img src="./images/slides/icon_slide_5.jpg" id="icon_slide_05">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_6.jpg" id="icon_slide_06">
+                        <img src="./images/slides/icon_slide_6.jpg" id="icon_slide_06">
                     </a>
                 </div>
             </div>
@@ -378,85 +378,85 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/customer-preferences/select-language/ref=aistrust2?pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unkhttps://www.amazon.com/gp/customer-preferences/select-language/ref=aistrust2?pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_7.JPG" id="icon_slide_07">
+                        <img src="./images/slides/icon_slide_7.JPG" id="icon_slide_07">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/customer-preferences/select-currency/ref=aistrust3?pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_8.JPG" id="icon_slide_08">
+                        <img src="./images/slides/icon_slide_8.JPG" id="icon_slide_08">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=201132710&ref=aistrust4&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_9.JPG" id="icon_slide_09">
+                        <img src="./images/slides/icon_slide_9.JPG" id="icon_slide_09">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html/ref=aistrust5?ie=UTF8&nodeId=201910710&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_10.JPG" id="icon_slide_10">
+                        <img src="./images/slides/icon_slide_10.JPG" id="icon_slide_10">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/ap/signin?_encoding=UTF8&accountStatusPolicy=P1&openid.assoc_handle=usflex&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.mode=checkid_setup&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0&openid.ns.pape=http%3A%2F%2Fspecs.openid.net%2Fextensions%2Fpape%2F1.0&openid.pape.max_auth_age=0&openid.return_to=https%3A%2F%2Fwww.amazon.com%2Fgp%2Fcss%2Forder-history%3Fie%3DUTF8%26pd_rd_r%3Daa1d3718-d9fe-4813-bce9-44ce68ec44b7%26pd_rd_w%3DnVaXH%26pd_rd_wg%3D5NxkY%26ref_%3Dpd_gw_unk&pageId=webcs-yourorder&showRmrMe=1">
-                        <img src="./images/icon_slide_11.JPG" id="icon_slide_11">
+                        <img src="./images/slides/icon_slide_11.JPG" id="icon_slide_11">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_12.JPG" id="icon_slide_12">
+                        <img src="./images/slides/icon_slide_12.JPG" id="icon_slide_12">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_13.JPG" id="icon_slide_13">
+                        <img src="./images/slides/icon_slide_13.JPG" id="icon_slide_13">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_14.JPG" id="icon_slide_14">
+                        <img src="./images/slides/icon_slide_14.JPG" id="icon_slide_14">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_15.JPG" id="icon_slide_15">
+                        <img src="./images/slides/icon_slide_15.JPG" id="icon_slide_15">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_16.JPG" id="icon_slide_16">
+                        <img src="./images/slides/icon_slide_16.JPG" id="icon_slide_16">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_17.JPG" id="icon_slide_17">
+                        <img src="./images/slides/icon_slide_17.JPG" id="icon_slide_17">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_18.JPG" id="icon_slide_18">
+                        <img src="./images/slides/icon_slide_18.JPG" id="icon_slide_18">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_19.JPG" id="icon_slide_19">
+                        <img src="./images/slides/icon_slide_19.JPG" id="icon_slide_19">
                     </a>
                 </div>
 
                 <div class="swiper-slide swiper-slide-active">
                     <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref=aistrust7&pf_rd_r=JSJVJVPHZXJQCNXBSA36&pf_rd_p=2286c657-220a-424c-866a-53ed3062937a&pd_rd_r=aa1d3718-d9fe-4813-bce9-44ce68ec44b7&pd_rd_w=nVaXH&pd_rd_wg=5NxkY&ref_=pd_gw_unk">
-                        <img src="./images/icon_slide_20.JPG" id="icon_slide_20">
+                        <img src="./images/slides/icon_slide_20.JPG" id="icon_slide_20">
                     </a>
                 </div>
             </div>
